--- a/x86_64.config
+++ b/x86_64.config
@@ -1,78 +1,46 @@
-CONFIG_TARGET_x86=y
-CONFIG_TARGET_x86_64=y
-CONFIG_TARGET_x86_64_Generic=y
-CONFIG_PACKAGE_grub2-efi=y
-CONFIG_EFI_IMAGES=y
-CONFIG_TARGET_IMAGES_GZIP=y
-CONFIG_TARGET_KERNEL_PARTSIZE=16
-CONFIG_TARGET_ROOTFS_PARTSIZE=300
-# CONFIG_GRUB_CONSOLE is not set
-CONFIG_PACKAGE_luci-app-docker=y
-CONFIG_PACKAGE_luci-i18n-docker-zh-cn=y
-# CONFIG_PACKAGE_luci-app-qbittorrent is not set
-CONFIG_PACKAGE_luci-app-ssr-plus=y
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks=y
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray=y
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Trojan=y
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Kcptun=y
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Server=y
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Socks=y
-CONFIG_PACKAGE_luci-theme-argon=y
-CONFIG_PACKAGE_luci-app-mwan3=y
-CONFIG_PACKAGE_luci-app-mwan3helper=y
-CONFIG_PACKAGE_luci-i18n-mwan3-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-mwan3helper-zh-cn=y
-CONFIG_PACKAGE_luci-app-syncdial=y
-CONFIG_PACKAGE_luci-app-ttyd=y
-CONFIG_PACKAGE_luci-i18n-ttyd-zh-cn=y
-CONFIG_PACKAGE_luci-app-webadmin=y
-CONFIG_PACKAGE_luci-i18n-webadmin-zh-cn=y
-CONFIG_PACKAGE_dnsmasq_full_auth=y
-CONFIG_PACKAGE_dnsmasq_full_conntrack=y
-CONFIG_PACKAGE_dnsmasq_full_dnssec=y
-CONFIG_PACKAGE_ddns-scripts_cloudflare.com-v4=y
-CONFIG_PACKAGE_ddns-scripts_freedns_42_pl=y
-CONFIG_PACKAGE_ddns-scripts_godaddy.com-v1=y
-CONFIG_PACKAGE_ddns-scripts_no-ip_com=y
-CONFIG_PACKAGE_ddns-scripts_nsupdate=y
-CONFIG_PACKAGE_ddns-scripts_route53-v1=y
-CONFIG_PACKAGE_curl=y
-CONFIG_PACKAGE_htop=y
-CONFIG_PACKAGE_nano=y
-CONFIG_PACKAGE_wget=y
-CONFIG_PACKAGE_kmod-kvm-amd=y
-CONFIG_PACKAGE_kmod-kvm-intel=y
-CONFIG_PACKAGE_kmod-kvm-x86=y
-CONFIG_OPENSSL_ENGINE_CRYPTO=y
-CONFIG_OPENSSL_ENGINE_DIGEST=y
-CONFIG_OPENSSL_WITH_CAMELLIA=y
-CONFIG_OPENSSL_WITH_COMPRESSION=y
-CONFIG_OPENSSL_WITH_DTLS=y
-CONFIG_OPENSSL_WITH_EC2M=y
-CONFIG_OPENSSL_WITH_ERROR_MESSAGES=y
-CONFIG_OPENSSL_WITH_GOST=y
-CONFIG_OPENSSL_WITH_IDEA=y
-CONFIG_OPENSSL_WITH_MDC2=y
-CONFIG_OPENSSL_WITH_RFC3779=y
-CONFIG_OPENSSL_WITH_SEED=y
-CONFIG_OPENSSL_WITH_WHIRLPOOL=y
-CONFIG_OPENVPN_openssl_ENABLE_DEF_AUTH=y
-CONFIG_OPENVPN_openssl_ENABLE_FRAGMENT=y
-CONFIG_OPENVPN_openssl_ENABLE_LZ4=y
-CONFIG_OPENVPN_openssl_ENABLE_LZO=y
-CONFIG_OPENVPN_openssl_ENABLE_MULTIHOME=y
-CONFIG_OPENVPN_openssl_ENABLE_PF=y
-CONFIG_OPENVPN_openssl_ENABLE_PORT_SHARE=y
-CONFIG_OPENVPN_openssl_ENABLE_SERVER=y
-CONFIG_OPENVPN_openssl_ENABLE_SMALL=y
-CONFIG_KERNEL_BUILD_USER="eSir Playground"
-CONFIG_GRUB_TITLE="OpenWrt AutoBuild by eSirPlayground"
-CONFIG_PACKAGE_kmod-usb-ohci=y
-CONFIG_PACKAGE_kmod-usb-ohci-pci=y
-CONFIG_PACKAGE_kmod-usb-storage-uas=y
-CONFIG_PACKAGE_kmod-usb-uhci=y
-CONFIG_PACKAGE_kmod-usb2=y
-CONFIG_PACKAGE_kmod-usb2-pci=y
-CONFIG_PACKAGE_kmod-usb3=y
-CONFIG_PACKAGE_luci-app-frpc=y
-CONFIG_PACKAGE_luci-app-smartdns=y
+CONFIG_TARGET_ipq40xx = y
+CONFIG_TARGET_ipq40xx_DEVICE_p2w_r619ac-128m = y
+CONFIG_TARGET_BOARD =“ ipq40xx”
+CONFIG_PACKAGE_boost-date_time = y
+CONFIG_PACKAGE_boost-program_options = y
+CONFIG_PACKAGE_ipt2socks = y
+CONFIG_PACKAGE_kcptun-client = y
+CONFIG_PACKAGE_kmod-usb-printer = y
+CONFIG_PACKAGE_libcap = y
+CONFIG_PACKAGE_libwebsockets-full = y
+CONFIG_PACKAGE_luci-app-netdata = y
+CONFIG_PACKAGE_luci-app-pppoe-relay = y
+＃未设置CONFIG_PACKAGE_luci-app-ssr-plus-jo_INCLUDE_Kcptun
+＃未设置CONFIG_PACKAGE_luci-app-ssr-plus-jo_INCLUDE_Shadowsocks
+＃未设置CONFIG_PACKAGE_luci-app-ssr-plus-jo_INCLUDE_ShadowsocksR_Server
+＃未设置CONFIG_PACKAGE_luci-app-ssr-plus-jo_INCLUDE_ShadowsocksR_Socks
+＃未设置CONFIG_PACKAGE_luci-app-ssr-plus-jo_INCLUDE_V2ray
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Kcptun = y
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks = y
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Server = y
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Socks = y
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Trojan = y
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray = y
+CONFIG_PACKAGE_luci-app-ttyd = y
+CONFIG_PACKAGE_luci-app-usb-printer = y
+CONFIG_PACKAGE_luci-i18n-netdata-zh-cn = y
+CONFIG_PACKAGE_luci-i18n-pppoe-relay-zh-cn = y
+CONFIG_PACKAGE_luci-i18n-ttyd-zh-cn = y
+CONFIG_PACKAGE_luci-i18n-usb-printer-zh-cn = y
+CONFIG_PACKAGE_luci-theme-argon = y
+CONFIG_PACKAGE_luci-theme-material = y
+CONFIG_PACKAGE_luci-theme-netgear = y
+CONFIG_PACKAGE_netdata = y
+CONFIG_PACKAGE_p910nd = y
+CONFIG_PACKAGE_rp-pppoe-common = y
+CONFIG_PACKAGE_rp-pppoe-relay = y
+CONFIG_PACKAGE_shadowsocksr-libev-ssr-local = y
+CONFIG_PACKAGE_trojan = y
+CONFIG_PACKAGE_ttyd = y
+＃未设置CONFIG_TARGET_x86_64
+＃未设置CONFIG_TARGET_x86_64_Generic
+＃未设置CONFIG_TARGET_x86_core2
+＃未设置CONFIG_TARGET_x86_generic
+＃未设置CONFIG_TARGET_x86_geode
+＃未设置CONFIG_TARGET_x86_legacy
+＃未设置CONFIG_TARGET_x86_zen
