--- a/x86_64.config
+++ b/x86_64.config
@@ -1,46 +1,59 @@
-CONFIG_TARGET_ipq40xx = y
-CONFIG_TARGET_ipq40xx_DEVICE_p2w_r619ac-128m = y
-CONFIG_TARGET_BOARD =“ ipq40xx”
-CONFIG_PACKAGE_boost-date_time = y
-CONFIG_PACKAGE_boost-program_options = y
-CONFIG_PACKAGE_ipt2socks = y
-CONFIG_PACKAGE_kcptun-client = y
-CONFIG_PACKAGE_kmod-usb-printer = y
-CONFIG_PACKAGE_libcap = y
-CONFIG_PACKAGE_libwebsockets-full = y
-CONFIG_PACKAGE_luci-app-netdata = y
-CONFIG_PACKAGE_luci-app-pppoe-relay = y
-＃未设置CONFIG_PACKAGE_luci-app-ssr-plus-jo_INCLUDE_Kcptun
-＃未设置CONFIG_PACKAGE_luci-app-ssr-plus-jo_INCLUDE_Shadowsocks
-＃未设置CONFIG_PACKAGE_luci-app-ssr-plus-jo_INCLUDE_ShadowsocksR_Server
-＃未设置CONFIG_PACKAGE_luci-app-ssr-plus-jo_INCLUDE_ShadowsocksR_Socks
-＃未设置CONFIG_PACKAGE_luci-app-ssr-plus-jo_INCLUDE_V2ray
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Kcptun = y
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks = y
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Server = y
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Socks = y
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Trojan = y
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray = y
-CONFIG_PACKAGE_luci-app-ttyd = y
-CONFIG_PACKAGE_luci-app-usb-printer = y
-CONFIG_PACKAGE_luci-i18n-netdata-zh-cn = y
-CONFIG_PACKAGE_luci-i18n-pppoe-relay-zh-cn = y
-CONFIG_PACKAGE_luci-i18n-ttyd-zh-cn = y
-CONFIG_PACKAGE_luci-i18n-usb-printer-zh-cn = y
-CONFIG_PACKAGE_luci-theme-argon = y
-CONFIG_PACKAGE_luci-theme-material = y
-CONFIG_PACKAGE_luci-theme-netgear = y
-CONFIG_PACKAGE_netdata = y
-CONFIG_PACKAGE_p910nd = y
-CONFIG_PACKAGE_rp-pppoe-common = y
-CONFIG_PACKAGE_rp-pppoe-relay = y
-CONFIG_PACKAGE_shadowsocksr-libev-ssr-local = y
-CONFIG_PACKAGE_trojan = y
-CONFIG_PACKAGE_ttyd = y
-＃未设置CONFIG_TARGET_x86_64
-＃未设置CONFIG_TARGET_x86_64_Generic
-＃未设置CONFIG_TARGET_x86_core2
-＃未设置CONFIG_TARGET_x86_generic
-＃未设置CONFIG_TARGET_x86_geode
-＃未设置CONFIG_TARGET_x86_legacy
-＃未设置CONFIG_TARGET_x86_zen
+CONFIG_TARGET_ipq40xx=y
+CONFIG_TARGET_ipq40xx_DEVICE_p2w_r619ac-128m=y
+CONFIG_TARGET_BOARD="ipq40xx"
+CONFIG_OPENSSL_WITH_COMPRESSION=y
+CONFIG_OPENSSL_WITH_DTLS=y
+CONFIG_OPENSSL_WITH_EC2M=y
+CONFIG_OPENSSL_WITH_NPN=y
+CONFIG_OPENVPN_openssl_ENABLE_DEF_AUTH=y
+CONFIG_OPENVPN_openssl_ENABLE_FRAGMENT=y
+CONFIG_OPENVPN_openssl_ENABLE_LZ4=y
+CONFIG_OPENVPN_openssl_ENABLE_LZO=y
+CONFIG_OPENVPN_openssl_ENABLE_MULTIHOME=y
+CONFIG_OPENVPN_openssl_ENABLE_PF=y
+CONFIG_OPENVPN_openssl_ENABLE_PORT_SHARE=y
+CONFIG_OPENVPN_openssl_ENABLE_SERVER=y
+CONFIG_OPENVPN_openssl_ENABLE_SMALL=y
+CONFIG_PACKAGE_boost-date_time=y
+CONFIG_PACKAGE_boost-program_options=y
+CONFIG_PACKAGE_dnsforwarder=y
+CONFIG_PACKAGE_haproxy=y
+CONFIG_PACKAGE_ipt2socks=y
+CONFIG_PACKAGE_kcptun-client=y
+CONFIG_PACKAGE_libcap=y
+CONFIG_PACKAGE_libcares=y
+CONFIG_PACKAGE_libltdl=y
+CONFIG_PACKAGE_liblzo=y
+CONFIG_PACKAGE_libwebsockets-full=y
+CONFIG_PACKAGE_luci-app-openvpn=y
+CONFIG_PACKAGE_luci-app-openvpn-server=y
+CONFIG_PACKAGE_luci-app-pppoe-relay=y
+# CONFIG_PACKAGE_luci-app-ssr-plus-Jo_INCLUDE_Shadowsocks is not set
+# CONFIG_PACKAGE_luci-app-ssr-plus-Jo_INCLUDE_ShadowsocksR_Server is not set
+# CONFIG_PACKAGE_luci-app-ssr-plus-Jo_INCLUDE_ShadowsocksR_Socks is not set
+# CONFIG_PACKAGE_luci-app-ssr-plus-Jo_INCLUDE_V2ray is not set
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Kcptun=y
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks=y
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Server=y
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Socks=y
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Trojan=y
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray=y
+CONFIG_PACKAGE_luci-app-ttyd=y
+CONFIG_PACKAGE_luci-i18n-openvpn-server-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-openvpn-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-pppoe-relay-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-ttyd-zh-cn=y
+CONFIG_PACKAGE_luci-theme-argon=y
+CONFIG_PACKAGE_luci-theme-material=y
+CONFIG_PACKAGE_luci-theme-netgear=y
+CONFIG_PACKAGE_openvpn-easy-rsa=y
+CONFIG_PACKAGE_openvpn-openssl=y
+CONFIG_PACKAGE_privoxy=y
+CONFIG_PACKAGE_rp-pppoe-common=y
+CONFIG_PACKAGE_rp-pppoe-relay=y
+CONFIG_PACKAGE_shadowsocks-libev-ss-local=y
+CONFIG_PACKAGE_shadowsocks-libev-ss-server=y
+CONFIG_PACKAGE_shadowsocksr-libev-ssr-local=y
+CONFIG_PACKAGE_trojan=y
+CONFIG_PACKAGE_ttyd=y
+CONFIG_PACKAGE_unzip=y
